2008-09-10 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, atmel.c, atmel.h
	  commands.c, commands.h, dfu-bool.h, dfu.c, dfu.h
	  main.c: Changed to using dfu_bool & stdint.h values.
	* configure.ac: Removed dependency on stdbool.h.

2008-08-29 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* fedora/dfu-programmer.spec.in,
	  fedora/99-dfu-programmer.rules,
	  fedora/10-dfu-programmer.fdi,
	  fedora/dfu-programmer-at90usb.perms,
	  fedora/dfu-programmer-at89c51.perms: Changed the permission
	  handling code to be based on HAL instead of PAM to keep up
	  with Fedora 9+ releases.
	* configure.ac: Incremented the release number
	* NEWS: Updated the latest news about the 0.4.6 release

2008-08-20 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>
	* src/arguments.c, AUTHORS: Apply the patch Sean D'Epagnier
	  sent to enable 4K bootloaders.
	* fedora/dfu-programmer.spec.in, configure.ac:
	  Incremented the release number
	* NEWS: Updated the latest news about the 0.4.5 release

2008-07-22 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>
	* src/arguments.c, AUTHORS: Apply the patch Sean D'Epagnier
	  sent to fix eeprom flashing.

2008-05-22 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>
	* docs/dfu-programmer.1, src/arguments.c, src/arguments.h,
	  src/atmel.c, src/atmel.h, src/commands.c: Added support
	  for eeprom-dump and eeprom-flash for the supported chips.
	* configure.ac, config.h.in: Added checks for stdbool.h
	  stdint.h.

2007-11-19 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* docs/dfu-programmer.1, src/arguments.c, src/arguments.h,
	  src/commands.c, AUTHORS: Applied the patch that Geoffrey
	  Wossum provided to add a reset command.
	* fedora/*: Adding udev rules for and permissions so that
	  the console owner will automatically be able to flash
	  any of the devices supported by dfu-programmer.
	* dfu-programmer.spec.in, Makefile.am, configure.ac: