@@ -1,3 +1,7 @@
+2008-09-13 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
+	* fedora/dfu-programmer.spec.in,
+	  fedora/10-dfu-programmer.fdi: Fixed the broken HAL rules.
+
 2008-09-10 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
 	* src/arguments.c, src/arguments.h, atmel.c, atmel.h
 	  commands.c, commands.h, dfu-bool.h, dfu.c, dfu.h
